--- a/gradle.properties
+++ b/gradle.properties
@@ -25,9 +25,9 @@ mod_id=moveslikemafuyu
 # The human-readable display name for the mod.
 mod_name=moveslikemafuyu
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
-mod_license=All Rights Reserved
+mod_license=GPL-3.0-only
 # The mod version. See https://semver.org/
-mod_version=1.0-SNAPSHOT
+mod_version=1.1.3
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
 # This should match the base package used for the mod sources.
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
@@ -35,4 +35,4 @@ mod_group_id=com
 # The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
 mod_authors=zhenshiz
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
-mod_description=colorblock高版本移植
+mod_description=moveslikemafuyu
